<resources>
    <string name="app_name" translatable="false">Waste Tracker</string>

    // Splash screen
    <string name="splash_screen_logo_content_description">Waste Tracker logo</string>

    // Landing page
    <string name="landing_page_message">Keep track of your waste, identify its different types and reduce it!</string>
    <string name="landing_page_button_login">Login or sign up</string>

    <string name="landing_page_image_content_description">Waste Tracker image</string>

    // Auth
    <string name="auth_sign_up">Sign up</string>
    <string name="auth_login">Login</string>

    <string name="auth_name">Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_confirm_password">Confirm password</string>

    <string name="auth_change_to_login">Already have an account? Login</string>
    <string name="auth_change_to_sign_up">Don\'t have an account yet? Sign up</string>

    <string name="auth_success_sign_up">Signed up</string>
    <string name="auth_success_login">Logged in</string>

    // News
    <string name="title_news">News</string>
    <string name="news_no_data_found">No news found</string>

    <string name="news_row_image_content_description">News illustration</string>

    // Calculate
    <string name="title_calculate">Calculate</string>
    <string name="calculate_question_num">Question %s%d</string>

    <string name="calculate_likert_never">Never</string>
    <string name="calculate_likert_hardly_never">Hardly ever</string>
    <string name="calculate_likert_sometimes">Sometimes</string>
    <string name="calculate_likert_often">Often</string>
    <string name="calculate_likert_usually">Usually</string>

    <string name="calculate_question_1">How often do you recycle?</string>
    <string name="calculate_question_2">Do you use plastic bags?</string>
    <string name="calculate_question_3">How often do you reuse?</string>
    <string name="calculate_question_4">Do you buy takeaway food?</string>
    <string name="calculate_question_5">Do you buy aluminum cans?</string>
    <string name="calculate_question_6">Every how many years do you change your phone?</string>
    <string name="calculate_question_7">How often do you buy new clothes?</string>
    <string name="calculate_question_8">How many paper rolls do you user every week?</string>


    <string name="calculate_validate_question">Please, answer the question before continuing</string>

    <string name="calculate_question_radio_yes">Yes</string>
    <string name="calculate_question_radio_no" translatable="false">No</string>

    <string name="calculate_question_back_button">Back</string>
    <string name="calculate_question_next_button">Next</string>

    <string name="calculate_question_number_word">Number</string>

    <string name="calculate_select_value_content_description">Select a value</string>

    // Calculate results
    <string name="title_results">Results</string>

    <string name="results_title_annual_waste">Your annual waste is:</string>
    <string name="results_kilograms" translatable="false">%.0fkg</string>

    <string name="results_less_than">Less than average</string>
    <string name="results_average">Average</string>
    <string name="results_more_than_average">More than Average</string>

    <string name="results_advice_less_than">
        "- Use a reusable bottle/cup for beverages on-the-go\n- Use reusable grocery bags, and not just for groceries\n- Purchase wisely and recycle"
    </string>
    <string name="results_advice_average">
        "- Avoid single-use food and drink containers and utensils\n- Buy secondhand items and donate used goods\n- Use reusable grocery bags, and not just for groceries"
    </string>
    <string name="results_advice_more_than_average">
        "- Shop local farmers markets and buy in bulk to reduce packaging\n- Curb your use of paper: mail, receipts, magazines\n- Use reusable grocery bags, and not just for groceries"
    </string>

    <string name="results_learn_more_button">Learn what to do</string>

    <string name="results_result_image_content_description">Calculation results image</string>

    // Identify
    <string name="title_identify">Identify</string>

    <string name="identify_take_photo">Touch to identify waste</string>

    <string name="identify_certainty">Certainty: %.2f%%</string>

    <string name="identify_start_again_button">Start again</string>
    <string name="identify_learn_more_button">Learn more</string>

    <string name="identify_error_identifying">Error identifying waste type</string>
    <string name="identify_error_upload_photo">Failed to upload photo</string>

    <string name="identify_captured_image_content_description">Captured photo to identify</string>

    // Learn
    <string name="title_learn">Learn</string>

    <string name="learn_types_of_waste">Types of waste</string>
    <string name="learn_recycle_tips">Recycle tips</string>
    <string name="learn_print_3d">Print 3D tools</string>

    <string name="learn_no_waste_types_found">No waste types found</string>
    <string name="learn_no_recycle_tips_found">No recycle tips found</string>
    <string name="learn_no_3d_tools_found">No 3D tools founds</string>

    <string name="learn_cell_column_image_content_description">Cell illustration</string>

    // Information
    <string name="title_information">Know more</string>

    <string name="information_waste_type">Waste type</string>
    <string name="information_recycle_tip">Recycle tip</string>
    <string name="information_3d_tool">3D tool</string>

    <string name="information_check_3d_tool_button">Check 3D model</string>

    <string name="information_image_content_description">Know more detail image</string>

    // Account
    <string name="title_account">Account</string>

    <string name="account_update_account_info_button">Update my account</string>
    <string name="account_logout_button">Logout</string>

    <string name="account_user_image_content_description">User account profile picture</string>

    // Update account
    <string name="title_update_account">Update Account</string>

    <string name="update_account_button">Update account</string>
    <string name="update_account_delete_button">Delete account</string>

    <string name="update_account_updated">Updated account</string>
    <string name="update_account_deleted">Deleted account</string>

    // Utils
    <string name="utils_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="utils_loading">Loading…</string>

    // Utils UI
    <string name="utils_ui_title_word" translatable="false">Title</string>
    <string name="utils_ui_description_word" translatable="false">Description</string>
    <string name="utils_ui_category_word" translatable="false">Category</string>

    <string name="utils_ui_email_word" translatable="false">waste.destroyer@gmail.com</string>
    <string name="utils_ui_name_word" translatable="false">Waste Destroyer</string>

    <string name="utils_ui_question_number_word" translatable="false">Question number</string>
    <string name="utils_ui_question_text_word" translatable="false">Question text</string>

    <string name="utils_ui_waste_name_word" translatable="false">Waste name</string>
    <string name="utils_ui_certainty_word" translatable="false">Certainty: 50.00%</string>

    <string name="utils_ui_result_kilograms_word" translatable="false">2000kg</string>

    // Validation
    <string name="validation_input_all_information">Input all information</string>
    <string name="validation_input_password">Enter your password</string>
    <string name="validation_passwords_not_match">Passwords do not match</string>
</resources>