<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calculate"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/title_calculate" />

    <item
        android:id="@+id/navigation_identify"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/title_identify" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/title_learn" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_account" />

</menu>